Fix overflowing problem

--- a/app/assets/stylesheets/people.css.scss
+++ b/app/assets/stylesheets/people.css.scss
@@ -65,6 +65,7 @@
 
   &.small {
     width: 100px;
+    height: 240px;
     .body {
       height: 240px;
     }
